--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,45 @@
+#root {
+  padding-top: 100px;
+}
+
 .list-container {
   display: grid;
   grid-template-columns: repeat(5, 180px);
-  gap: 20px;
+  gap: 50px;
+  width: 1100px;
+  margin: 0 auto;
 }
 
 .monster {
-  margin: 0 auto;
-  width: 200px;
+  cursor: pointer;
+}
+
+.monster p {
+  padding: 20px 0;
+  text-align: center;
+}
+
+h1.title {
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-weight: 700px;
+  text-align: center;
+}
+
+.detail-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.detail-card p {
+  margin-top: 10px;
+}
+
+.btn {
+  margin-top: 20px;
+  padding: 8px 15px;
+  border: 1px solid black;
+  border-radius: 8px;
+  cursor: pointer;
 }
